fix: ui shift on focus due to difference in border width

--- a/packages/raystack/v1/components/textArea/textArea.module.css
+++ b/packages/raystack/v1/components/textArea/textArea.module.css
@@ -59,13 +59,14 @@
   line-height: 16px;
   color: var(--rs-color-text-base-primary);
   padding: var(--rs-space-3);
-  /* box-shadow: 0px 1px 2px #1018280F; */
-  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.06);
+  box-shadow: 0px 1px 2px #1018280F;
   font-family: inherit;
+  box-shadow: inset 0 0 0 0.5px transparent;
 }
 
 .textarea:focus {
-  border: 1px solid var(--rs-color-border-accent-emphasis);
+  border: 0.5px solid var(--rs-color-border-accent-emphasis);
+  box-shadow: inset 0 0 0 0.5px var(--rs-color-border-accent-emphasis), 0px 1px 2px #1018280F;
 }
 
 .textarea:hover {
@@ -92,6 +93,7 @@
 }
 
 .error {
-  border: 1px solid var(--rs-color-border-danger-emphasis);
+  border: 0.5px solid var(--rs-color-border-danger-emphasis);
+  box-shadow: inset 0 0 0 0.5px var(--rs-color-border-danger-emphasis), 0px 1px 2px #1018280F;
 }
   
